fixed scroll issue on mobile view of timeline

--- a/components/styles.module.scss
+++ b/components/styles.module.scss
@@ -6,6 +6,7 @@
 .customRow {
   margin: 0;
   justify-content: center;
+  overflow: hidden;
 }
 
 .title {
